--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mongodb": "^3.0.10",
     "morgan": "~1.9.0",
     "node": "^10.4.0",
     "nodemon": "^1.17.5",
-    "pug": "2.0.0-beta11"
+    "onoff": "^3.1.0",
+    "pug": "2.0.0-beta11",
+    "serve-static": "^1.13.2"
   }
 }
